# internal/api/xxxxxs/services/view_xxxxx_paging.go
@@ -4,8 +4,6 @@ import (
 	"context"
 	"fmt"
 	"template-api-golang/internal/api/xxxxxs/models"
-
-	"github.com/jindasoft/jinda-platforms/xdate"
 )
 
 func (s *service) ViewXxxxxPaging(ctx context.Context, req *models.GetXxxxxPagingRequest) (*[]models.GetXxxxxPagingResponse, error) {
@@ -20,12 +18,9 @@ func (s *service) ViewXxxxxPaging(ctx context.Context, req *models.GetXxxxxPagin
 
 	for _, p := range *pt {
 		res = append(res, models.GetXxxxxPagingResponse{
-			ID:        "id", // p.ID --- IGNORE ---
-			Code:      p.Code,
-			Name:      p.Name.String(ctx),
-			Status:    "p.Status",
-			CreatedAt: p.CreatedAt.Format(xdate.FormatISO8601),
-			UpdatedAt: p.UpdatedAt.Format(xdate.FormatISO8601),
+			ID:   "id", // p.ID --- IGNORE ---
+			Code: p.Code,
+			Name: p.Name,
 		})
 	}
 
